feact(api): added controllers and services to store the campaign payload in the DB
